--- a/css/common.css
+++ b/css/common.css
@@ -72,6 +72,10 @@ img {
    font-family:'Droid Sans Mono',curior,mono;
 }
 /*-------------------------------custom icons---------------------------*/
+.testIcon {
+   background-image: url("<?php echo IMG.'/icons/icons.png'; ?>"); 
+   background-position: -20px -20px;
+}
 .GFIcon {
    background-image: url("<?php echo IMG.'/icons/06-magnify.png'; ?>"); 
    background-repeat: no-repeat;
