--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 *{
    font-size:11px;
-   font-family:Arial,Verdana,'Bitstream Vera Sans',Helvetica,sans-serif;
+   font-family:'Droid Sans',Arial,Verdana,'Bitstream Vera Sans',Helvetica,sans-serif;
    /*text-shadow: 0 1px 1px #005791;*/
 }
 
@@ -14,7 +14,7 @@ body{
 body, th, td {
    /*font: normal 11px Verdana,Arial,'Bitstream Vera Sans',Helvetica,sans-serif;*/
    font-size: 11px;
-   font-family: Verdana,Arial,'Bitstream Vera Sans',Helvetica,sans-serif;
+   font-family:'Droid Sans',Verdana,Arial,'Bitstream Vera Sans',Helvetica,sans-serif;
    border-color:<?php echo $light_color; ?>
 }
 
@@ -25,7 +25,7 @@ th{
 }
 
 h1, h2, h3, h4 {
-   font-family: Arial,Verdana,'Bitstream Vera Sans',Helvetica,sans-serif;
+   font-family: 'Droid Sans',Arial,Verdana,'Bitstream Vera Sans',Helvetica,sans-serif;
    font-weight: bold;
    letter-spacing: -0.018em;
    page-break-after: avoid;
